@@ -52,19 +52,15 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import joptsimple.OptionException;
 
 import static java.time.LocalDateTime.now;
-import static java.util.Arrays.asList;
-import static java.util.Collections.singleton;
-import static java.util.Collections.singletonList;
-import static java.util.Collections.singletonMap;
 import static java.util.stream.Collectors.toMap;
 import static org.apache.kafka.clients.CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG;
 import static org.apache.kafka.clients.admin.AdminClientConfig.RETRIES_CONFIG;
@@ -120,23 +116,23 @@ public class ResetConsumerGroupOffsetTest {
     }
 
     private String[] buildArgsForGroups(ClusterInstance cluster, List<String> groups, String... args) {
-        List<String> res = new ArrayList<>(asList(basicArgs(cluster)));
+        List<String> res = new ArrayList<>(List.of(basicArgs(cluster)));
         for (String group : groups) {
             res.add("--group");
             res.add(group);
         }
-        res.addAll(asList(args));
+        res.addAll(List.of(args));
         return res.toArray(new String[0]);
     }
 
     private String[] buildArgsForGroup(ClusterInstance cluster, String group, String... args) {
-        return buildArgsForGroups(cluster, singletonList(group), args);
+        return buildArgsForGroups(cluster, List.of(group), args);
     }
 
     private String[] buildArgsForAllGroups(ClusterInstance cluster, String... args) {
-        List<String> res = new ArrayList<>(asList(basicArgs(cluster)));
+        List<String> res = new ArrayList<>(List.of(basicArgs(cluster)));
         res.add("--all-groups");
-        res.addAll(asList(args));
+        res.addAll(List.of(args));
         return res.toArray(new String[0]);
     }
 
@@ -153,6 +149,28 @@ public class ResetConsumerGroupOffsetTest {
         }
     }
 
+    @ClusterTest(
+        brokers = 2,
+        serverProperties = {
+            @ClusterConfigProperty(key = OFFSETS_TOPIC_REPLICATION_FACTOR_CONFIG, value = "2"),
+        }
+    )
+    public void testResetOffsetsWithOfflinePartitionNotInResetTarget(ClusterInstance cluster) throws Exception {
+        String topic = generateRandomTopic();
+        String group = "new.group";
+        String[] args = buildArgsForGroup(cluster, group, "--to-earliest", "--execute", "--topic", topic + ":0");
+
+        try (Admin admin = cluster.admin(); ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(args)) {
+            admin.createTopics(List.of(new NewTopic(topic, Map.of(0, List.of(0), 1, List.of(1)))));
+            cluster.waitTopicCreation(topic, 2);
+
+            cluster.shutdownBroker(1);
+
+            Map<TopicPartition, OffsetAndMetadata> resetOffsets = service.resetOffsets().get(group);
+            assertEquals(Set.of(new TopicPartition(topic, 0)), resetOffsets.keySet());
+        }
+    }
+
     @ClusterTest
     public void testResetOffsetsExistingTopic(ClusterInstance cluster) {
         String topic = generateRandomTopic();
@@ -160,11 +178,11 @@ public class ResetConsumerGroupOffsetTest {
         String[] args = buildArgsForGroup(cluster, group, "--topic", topic, "--to-offset", "50");
 
         produceMessages(cluster, topic, 100);
-        resetAndAssertOffsets(cluster, args, 50, true, singletonList(topic));
+        resetAndAssertOffsets(cluster, args, 50, true, List.of(topic));
         resetAndAssertOffsets(cluster, addTo(args, "--dry-run"),
-                50, true, singletonList(topic));
+                50, true, List.of(topic));
         resetAndAssertOffsets(cluster, addTo(args, "--execute"),
-                50, false, singletonList(topic));
+                50, false, List.of(topic));
     }
 
     @ClusterTest
@@ -182,11 +200,11 @@ public class ResetConsumerGroupOffsetTest {
             }
 
             String[] args = buildArgsForGroups(cluster, groups, "--topic", topic, "--to-offset", "50");
-            resetAndAssertOffsets(cluster, args, 50, true, singletonList(topic));
+            resetAndAssertOffsets(cluster, args, 50, true, List.of(topic));
             resetAndAssertOffsets(cluster, addTo(args, "--dry-run"),
-                    50, true, singletonList(topic));
+                    50, true, List.of(topic));
             resetAndAssertOffsets(cluster, addTo(args, "--execute"),
-                    50, false, singletonList(topic));
+                    50, false, List.of(topic));
         }
     }
 
@@ -204,11 +222,11 @@ public class ResetConsumerGroupOffsetTest {
                     awaitConsumerProgress(cluster, topic, group, 100L);
                 }
             }
-            resetAndAssertOffsets(cluster, args, 50, true, singletonList(topic));
+            resetAndAssertOffsets(cluster, args, 50, true, List.of(topic));
             resetAndAssertOffsets(cluster, addTo(args, "--dry-run"),
-                    50, true, singletonList(topic));
+                    50, true, List.of(topic));
             resetAndAssertOffsets(cluster, addTo(args, "--execute"),
-                    50, false, singletonList(topic));
+                    50, false, List.of(topic));
         }
     }
 
@@ -323,9 +341,9 @@ public class ResetConsumerGroupOffsetTest {
         String[] args = buildArgsForGroup(cluster, group, "--topic", topic, "--by-duration", "PT1M", "--execute");
 
         try (Admin admin = cluster.admin()) {
-            admin.createTopics(singleton(new NewTopic(topic, 1, (short) 1))).all().get();
-            resetAndAssertOffsets(cluster, args, 0, false, singletonList(topic));
-            admin.deleteTopics(singleton(topic)).all().get();
+            admin.createTopics(Set.of(new NewTopic(topic, 1, (short) 1))).all().get();
+            resetAndAssertOffsets(cluster, args, 0, false, List.of(topic));
+            admin.deleteTopics(Set.of(topic)).all().get();
         }
     }
 
@@ -453,7 +471,7 @@ public class ResetConsumerGroupOffsetTest {
 
             try (Admin admin = cluster.admin();
                  ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(args)) {
-                admin.createTopics(singleton(new NewTopic(topic, 2, (short) 1))).all().get();
+                admin.createTopics(Set.of(new NewTopic(topic, 2, (short) 1))).all().get();
 
                 produceConsumeAndShutdown(cluster, topic, group, 2, groupProtocol);
                 Map<TopicPartition, Long> priorCommittedOffsets = committedOffsets(cluster, topic, group);
@@ -464,7 +482,7 @@ public class ResetConsumerGroupOffsetTest {
                 expectedOffsets.put(tp1, 0L);
                 resetAndAssertOffsetsCommitted(cluster, service, expectedOffsets, topic);
 
-                admin.deleteTopics(singleton(topic)).all().get();
+                admin.deleteTopics(Set.of(topic)).all().get();
             }
         }
     }
@@ -482,7 +500,7 @@ public class ResetConsumerGroupOffsetTest {
 
             try (Admin admin = cluster.admin();
                  ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(args)) {
-                admin.createTopics(asList(new NewTopic(topic1, 1, (short) 1),
+                admin.createTopics(List.of(new NewTopic(topic1, 1, (short) 1),
                         new NewTopic(topic2, 1, (short) 1))).all().get();
 
                 produceConsumeAndShutdown(cluster, topic1, group, 1, groupProtocol);
@@ -496,10 +514,10 @@ public class ResetConsumerGroupOffsetTest {
                 expMap.put(tp1, 0L);
                 expMap.put(tp2, 0L);
                 assertEquals(expMap, allResetOffsets);
-                assertEquals(singletonMap(tp1, 0L), committedOffsets(cluster, topic1, group));
-                assertEquals(singletonMap(tp2, 0L), committedOffsets(cluster, topic2, group));
+                assertEquals(Map.of(tp1, 0L), committedOffsets(cluster, topic1, group));
+                assertEquals(Map.of(tp2, 0L), committedOffsets(cluster, topic2, group));
 
-                admin.deleteTopics(asList(topic1, topic2)).all().get();
+                admin.deleteTopics(List.of(topic1, topic2)).all().get();
             }
         }
     }
@@ -517,7 +535,7 @@ public class ResetConsumerGroupOffsetTest {
 
             try (Admin admin = cluster.admin();
                  ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(args)) {
-                admin.createTopics(asList(new NewTopic(topic1, 2, (short) 1),
+                admin.createTopics(List.of(new NewTopic(topic1, 2, (short) 1),
                         new NewTopic(topic2, 2, (short) 1))).all().get();
 
                 produceConsumeAndShutdown(cluster, topic1, group, 2, groupProtocol);
@@ -540,7 +558,7 @@ public class ResetConsumerGroupOffsetTest {
                 priorCommittedOffsets2.put(tp2, 0L);
                 assertEquals(priorCommittedOffsets2, committedOffsets(cluster, topic2, group));
 
-                admin.deleteTopics(asList(topic1, topic2)).all().get();
+                admin.deleteTopics(List.of(topic1, topic2)).all().get();
             }
         }
     }
@@ -561,7 +579,7 @@ public class ResetConsumerGroupOffsetTest {
             try (Admin admin = cluster.admin();
                  ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(cgcArgs)) {
 
-                admin.createTopics(singleton(new NewTopic(topic, 2, (short) 1))).all().get();
+                admin.createTopics(Set.of(new NewTopic(topic, 2, (short) 1))).all().get();
                 produceConsumeAndShutdown(cluster, topic, group, 2, groupProtocol);
 
                 Map<String, Map<TopicPartition, OffsetAndMetadata>> exportedOffsets = service.resetOffsets();
@@ -580,7 +598,7 @@ public class ResetConsumerGroupOffsetTest {
                     assertEquals(exp1, toOffsetMap(importedOffsets.get(group)));
                 }
 
-                admin.deleteTopics(singleton(topic));
+                admin.deleteTopics(Set.of(topic));
             }
         }
     }
@@ -599,14 +617,14 @@ public class ResetConsumerGroupOffsetTest {
             TopicPartition t1p1 = new TopicPartition(topic1, 1);
             TopicPartition t2p0 = new TopicPartition(topic2, 0);
             TopicPartition t2p1 = new TopicPartition(topic2, 1);
-            String[] cgcArgs = buildArgsForGroups(cluster, asList(group1, group2),
+            String[] cgcArgs = buildArgsForGroups(cluster, List.of(group1, group2),
                 "--all-topics", "--to-offset", "2", "--export");
             File file = TestUtils.tempFile("reset", ".csv");
 
             try (Admin admin = cluster.admin();
                  ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(cgcArgs)) {
 
-                admin.createTopics(asList(new NewTopic(topic1, 2, (short) 1),
+                admin.createTopics(List.of(new NewTopic(topic1, 2, (short) 1),
                         new NewTopic(topic2, 2, (short) 1))).all().get();
 
                 produceConsumeAndShutdown(cluster, topic1, group1, 1, groupProtocol);
@@ -630,7 +648,7 @@ public class ResetConsumerGroupOffsetTest {
                 assertEquals(exp2, toOffsetMap(exportedOffsets.get(group2)));
 
                 // Multiple --group's offset import
-                String[] cgcArgsExec = buildArgsForGroups(cluster, asList(group1, group2),
+                String[] cgcArgsExec = buildArgsForGroups(cluster, List.of(group1, group2),
                         "--all-topics",
                         "--from-file", file.getCanonicalPath(), "--dry-run");
                 try (ConsumerGroupCommand.ConsumerGroupService serviceExec = getConsumerGroupService(cgcArgsExec)) {
@@ -647,7 +665,7 @@ public class ResetConsumerGroupOffsetTest {
                     assertEquals(exp1, toOffsetMap(importedOffsets2.get(group1)));
                 }
 
-                admin.deleteTopics(asList(topic1, topic2));
+                admin.deleteTopics(List.of(topic1, topic2));
             }
         }
     }
@@ -672,7 +690,7 @@ public class ResetConsumerGroupOffsetTest {
         try (Admin admin = cluster.admin();
              ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(args)) {
 
-            admin.createTopics(singleton(new NewTopic(topic, 3, (short) 1))).all().get();
+            admin.createTopics(Set.of(new NewTopic(topic, 3, (short) 1))).all().get();
             produceConsumeAndShutdown(cluster, topic, group, 2, GroupProtocol.CLASSIC);
             assertDoesNotThrow(() -> resetOffsets(service));
             // shutdown a broker to make some partitions missing leader
@@ -691,7 +709,7 @@ public class ResetConsumerGroupOffsetTest {
         try (Admin admin = cluster.admin();
              ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(args)) {
 
-            admin.createTopics(singleton(new NewTopic(topic, 1, (short) 1))).all().get();
+            admin.createTopics(Set.of(new NewTopic(topic, 1, (short) 1))).all().get();
             produceConsumeAndShutdown(cluster, topic, group, 2, GroupProtocol.CLASSIC);
             assertThrows(UnknownTopicOrPartitionException.class, () -> resetOffsets(service));
         }
@@ -708,7 +726,7 @@ public class ResetConsumerGroupOffsetTest {
     private Map<TopicPartition, Long> committedOffsets(ClusterInstance cluster,
                                                        String topic,
                                                        String group) {
-        try (Admin admin = Admin.create(singletonMap(BOOTSTRAP_SERVERS_CONFIG, cluster.bootstrapServers()))) {
+        try (Admin admin = Admin.create(Map.of(BOOTSTRAP_SERVERS_CONFIG, cluster.bootstrapServers()))) {
             return admin.listConsumerGroupOffsets(group)
                     .all().get()
                     .get(group).entrySet()
@@ -723,13 +741,13 @@ public class ResetConsumerGroupOffsetTest {
     private ConsumerGroupCommand.ConsumerGroupService getConsumerGroupService(String[] args) {
         return new ConsumerGroupCommand.ConsumerGroupService(
                 ConsumerGroupCommandOptions.fromArgs(args),
-                singletonMap(RETRIES_CONFIG, Integer.toString(Integer.MAX_VALUE)));
+                Map.of(RETRIES_CONFIG, Integer.toString(Integer.MAX_VALUE)));
     }
 
     private void produceMessages(ClusterInstance cluster, String topic, int numMessages) {
         List<ProducerRecord<byte[], byte[]>> records = IntStream.range(0, numMessages)
                 .mapToObj(i -> new ProducerRecord<byte[], byte[]>(topic, new byte[100 * 1000]))
-                .collect(Collectors.toList());
+                .toList();
         produceMessages(cluster, records);
     }
 
@@ -752,7 +770,7 @@ public class ResetConsumerGroupOffsetTest {
                                        String topic,
                                        String[] args,
                                        long expectedOffset) {
-        resetAndAssertOffsets(cluster, args, expectedOffset, false, singletonList(topic));
+        resetAndAssertOffsets(cluster, args, expectedOffset, false, List.of(topic));
     }
 
     private void resetAndAssertOffsets(ClusterInstance cluster,
@@ -779,7 +797,7 @@ public class ResetConsumerGroupOffsetTest {
                                                                          long expectedOffset) {
         return topics.stream()
                 .collect(toMap(Function.identity(),
-                        topic -> singletonMap(new TopicPartition(topic, 0),
+                        topic -> Map.of(new TopicPartition(topic, 0),
                                 expectedOffset)));
     }
 
@@ -799,7 +817,7 @@ public class ResetConsumerGroupOffsetTest {
     private static List<String> generateIds(String name) {
         return IntStream.rangeClosed(1, 2)
                 .mapToObj(id -> name + id)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void produceConsumeAndShutdown(ClusterInstance cluster,
@@ -854,7 +872,7 @@ public class ResetConsumerGroupOffsetTest {
                                        String topic,
                                        String group,
                                        long count) throws Exception {
-        try (Admin admin = Admin.create(singletonMap(BOOTSTRAP_SERVERS_CONFIG, cluster.bootstrapServers()))) {
+        try (Admin admin = Admin.create(Map.of(BOOTSTRAP_SERVERS_CONFIG, cluster.bootstrapServers()))) {
             Supplier<Long> offsets = () -> {
                 try {
                     return admin.listConsumerGroupOffsets(group)
@@ -903,8 +921,8 @@ public class ResetConsumerGroupOffsetTest {
     }
 
     private String[] addTo(String[] args, String... extra) {
-        List<String> res = new ArrayList<>(asList(args));
-        res.addAll(asList(extra));
+        List<String> res = new ArrayList<>(List.of(args));
+        res.addAll(List.of(extra));
         return res.toArray(new String[0]);
     }
 }
